fix: article style

--- a/blog/src/_posts/2022-09-18-lq1gs9.md
+++ b/blog/src/_posts/2022-09-18-lq1gs9.md
@@ -3,6 +3,7 @@ title: 读书笔记《猫和狗的生活哲学》
 description: 作者：简单心理一本把日常生活中大众内心细致透出的插画书，内容量不大，但是信息量还是很大的，让读者有比较大的发散思考空间。一条记忆比较深刻的内容：“即兴戏剧（Improvisational Theater）是一种没有剧本的表演形式，它给我们带来了一种新的“不质疑”的思维方式：Yes！生活就是每天...
 author: 小胡子哥
 from: 语雀
+published: false
 fromUrl: https://www.yuque.com/barretlee/reading/lq1gs9
 tags:
   - 阅读进行中
