--- a/blog/src/_posts/2022-09-18-npcye8.md
+++ b/blog/src/_posts/2022-09-18-npcye8.md
@@ -2,6 +2,7 @@
 title: 读书笔记《记一忘三二》
 description: 作者：李娟作者的文风比较有趣，有的时候就感觉她在写单口相声，正经八百地扔一个包袱，突然又来一个 180° 翻转，而且还可能再来一个 180° 转回去。这是一本日记，内容有长有短，讲的都是生活的一些琐事，但是这些琐事在李娟的嘴里说出来，总是充满了无数的趣味，偶尔在文末再来一次主题升华，不得不说，...
 author: 小胡子哥
+published: false
 from: 语雀
 fromUrl: https://www.yuque.com/barretlee/reading/npcye8
 tags:
