--- a/blog/src/_posts/2022-09-18-nurs25.md
+++ b/blog/src/_posts/2022-09-18-nurs25.md
@@ -3,6 +3,7 @@ title: 读书笔记《识茶、鉴茶与品茶秘籍》
 description: 小胡子哥的个人网站
 author: 小胡子哥
 from: 语雀
+published: false
 fromUrl: https://www.yuque.com/barretlee/reading/nurs25
 tags:
   - 阅读进行中
