--- a/blog/src/_posts/2022-09-18-za4zgn.md
+++ b/blog/src/_posts/2022-09-18-za4zgn.md
@@ -3,6 +3,7 @@ title: 读书笔记《清醒地活：超越自我的生命之旅》
 description: 作者：迈克尔·辛格以前写过一篇文章《一切都是最好的安排》，结合最近在看的这本书，弄明白了，为啥之前的“这种感觉”不见了——刚才的焦躁是一种情绪，我被焦躁的情绪给带走了，我成了焦躁的我，而在听到孩子妈妈那段话之后，我觉知到了这个焦躁的我，回到了观察者的角色，回到了居中的位置，回到了本我。回到本我...
 author: 小胡子哥
 from: 语雀
+published: false
 fromUrl: https://www.yuque.com/barretlee/reading/za4zgn
 tags:
   - 阅读进行中
