fix: cdn address

--- a/blog/src/_posts/2013-04-24-cb-ie6-bugs.md
+++ b/blog/src/_posts/2013-04-24-cb-ie6-bugs.md
@@ -83,7 +83,7 @@ selector {
 ```
 
 <pre><span><strong>9. Bicubic图像缩放(Bicubic Image Scaling)</strong></span>你会喜欢这个的。IE那糟糕图像缩放让你很困扰？如果你拿IE和其他浏览器比较，IE缩小的图像看起来不如其他浏览器。</pre>
-<p><img src="https://img.alicdn.com/tfs/TB1oyqGa_tYBeNjy1XdXXXXyVXa-300-300.png" loading="lazy" data-original="/blogimgs/2013/04/24/2010072616324250.gif" data-source="http://pic002.cnblogs.com/img/lw19870811/201007/2010072616324250.gif" alt=""></p>
+<p><img src="https://pic002.cnblogs.com/img/lw19870811/201007/2010072616324250.gif" alt=""></p>
 <pre><em>解决方法</em></pre>
 
 ```
