--- a/blog/src/_posts/2014-03-30-WYSIWYG.md
+++ b/blog/src/_posts/2014-03-30-WYSIWYG.md
@@ -9,7 +9,7 @@ date: 2014-03-30 00:00:00
 ---
 
 
-<img src="https://img.alicdn.com/tfs/TB1oyqGa_tYBeNjy1XdXXXXyVXa-300-300.png" loading="lazy" data-original="/blogimgs/2014/03/30/github-logo.png" data-source="http://hi.barretlee.com/imgs/shares/github-logo.png" style="width:200px;height:200px" alt="github logo" />
+<img src="https://hi.barretlee.com/imgs/shares/github-logo.png" style="width:200px;height:200px" alt="github logo" />
 
 最简单的博客就是，你只需要写，其他的啥都不用管。github 就能够做到。
 
