--- a/blog/src/_posts/2014-03-31-demo.md
+++ b/blog/src/_posts/2014-03-31-demo.md
@@ -7,7 +7,7 @@ date: 2014-03-31 00:00:00
 ---
 
 
-<img src="https://img.alicdn.com/tfs/TB1oyqGa_tYBeNjy1XdXXXXyVXa-300-300.png" loading="lazy" data-original="/blogimgs/2014/03/31/demo_banner.png" data-source="http://hi.barretlee.com/imgs/shares/demo_banner.png" />
+<img src="https://hi.barretlee.com/imgs/shares/demo_banner.png" />
 
 开始在 github 上整理自己做过的东西，把之前写的 demo 都放到这里来，过段时间建个子域名 demo.barretlee.com。
 
