--- a/blog/src/_posts/2014-12-21-cb-wai.md
+++ b/blog/src/_posts/2014-12-21-cb-wai.md
@@ -13,7 +13,7 @@ from: 博客园
 
 
 <p>中国盲人人数已经超过了600万，平均每200多人中就有一位是盲人，这个规模还是相当庞大的。由于视觉障碍，盲人同这个世界的交集小了很多，但互联网的的发展为他们打开了一扇与更多人交流的窗口。</p>
-<p><img src="https://img.alicdn.com/tfs/TB1oyqGa_tYBeNjy1XdXXXXyVXa-300-300.png" loading="lazy" data-original="/blogimgs/2014/12/21/211619123902315.png" data-source="http://images.cnitblog.com/blog/387325/201412/211619123902315.png" alt=""></p>
+<p><img src="https://images.cnitblog.com/blog/387325/201412/211619123902315.png" alt=""></p>
 <p>[图片取自<a href="http://news.lnd.com.cn/htm/2010-12/01/content_1634981.htm">网络</a> - 吴铸上网只需要键盘、音响和麦克]</p>
 <p>这个窗口的开关掌握在我们工程师手中！我们有义务也有责任为他们开窗！</p>
 <h3>一、上网的盲人用户和统计方式</h3>
@@ -31,7 +31,7 @@ from: 博客园
 <p>图片是电商网站中最重要的角色，但是盲人的世界里没有可视化的图片，如果页面上的 img 标签不加 alt 属性，对盲人来说这就是个无用网站。<strong>让图片可读，一件可轻松搞定的事情，却可以造福千千万万的视障人士，你值得去做！</strong></p>
 <h4>2. 可操作元素，无法聚焦</h4>
 <p>诸如此类的 tab 切换随处可见，</p>
-<p><img src="https://img.alicdn.com/tfs/TB1oyqGa_tYBeNjy1XdXXXXyVXa-300-300.png" loading="lazy" data-original="/blogimgs/2014/12/21/211619204525152.png" data-source="http://images.cnitblog.com/blog/387325/201412/211619204525152.png" alt=""></p>
+<p><img src="https://images.cnitblog.com/blog/387325/201412/211619204525152.png" alt=""></p>
 <p>网页可聚焦的元素不多，a、input、button、area 等等不到十个。我们通常使用 li 元素作为 tabHeader 的切换元素，这种情况下，盲人使用键盘操作是没有办法聚焦上去的，结果就是很多内容查看不到。</p>
 <p><strong>这是一个容易被忽略，但是影响面极广的问题，希望大家可以重视！</strong> 解决方案很简单，给元素加个 tabIndex 属性。</p>
 <h4>3. 模板渲染页面后，焦点停靠不合理</h4>
