--- a/blog/src/_posts/2023-09-03-ocbc-bank.md
+++ b/blog/src/_posts/2023-09-03-ocbc-bank.md
@@ -1,9 +1,6 @@
+---
 title: 新加坡华侨银行 OCBC 开户小记
-description: >-
-  最近看到好多人推荐开通新加坡华侨银行 OCBC，这是我目前为止看到唯一一个，使用全部大陆身份信息就可以安全开通且没啥后顾之忧的境外银行卡，之前尝试开通
-  Wise，获得了一张英国 Visa 卡，但没有英国境外地址一直让我担忧被风控，而 ZA Bank
-  需要肉身去香港才能开通，因为它要求你提供出境记录，而且本质还是一张虚拟卡。
-warning: ''
+description: 最近看到好多人推荐开通新加坡华侨银行 OCBC，这是我目前为止看到唯一一个，使用全部大陆身份信息就可以安全开通且没啥后顾之忧的境外银行卡，之前尝试开通 Wise，获得了一张英国 Visa 卡，但没有英国境外地址一直让我担忧被风控，而 ZA Bank 需要肉身去香港才能开通，因为它要求你提供出境记录，而且本质还是一张虚拟卡。
 author: Barret李靖
 tags:
   - 小胡子哥的思源地
